--- a/dashboard.html
+++ b/dashboard.html
@@ -121,7 +121,14 @@ input[type="file"] { display:none; }
 }
 body.light-theme .input-field { background:rgba(255,255,255,0.7); }
 .input-field:focus { border-color:var(--accent); outline:none; box-shadow:0 0 8px rgba(176,0,58,0.35); }
-.input-field:disabled { opacity:0.6; cursor:not-allowed; }
+.input-field:disabled { 
+  opacity:0.7; 
+  cursor:not-allowed;
+  background:rgba(100,100,100,0.2);
+}
+body.light-theme .input-field:disabled { 
+  background:rgba(200,200,200,0.4); 
+}
 textarea { resize:none; font-family:inherit; }
 .setup-btn {
   display: inline-block;
@@ -182,7 +189,7 @@ footer a:hover { color: var(--accent); }
   <input type="file" id="profilePicture" accept="image/*">
   
   <input type="text" id="fullName" class="input-field" placeholder="Full Name" required>
-  <input type="email" id="email" class="input-field" placeholder="Email" readonly>
+  <input type="email" id="email" class="input-field" placeholder="Email" readonly disabled>
   <input type="text" id="username" class="input-field" placeholder="Username" required>
   <textarea id="bio" class="input-field" placeholder="Short Bio (optional)" rows="3"></textarea>
   
@@ -255,7 +262,7 @@ profilePicInput.addEventListener('change', (e)=>{
 skipBtn.addEventListener('click', (e) => {
   e.preventDefault();
   if(confirm('Skip profile setup? You can complete it later from settings.')) {
-    window.location.href = "dashboard.html";
+    window.location.href = "main.html";
   }
 });
 
@@ -263,7 +270,7 @@ skipBtn.addEventListener('click', (e) => {
 onAuthStateChanged(auth, async user => {
   if(!user){
     alert("You must be logged in to setup a profile.");
-    window.location.href = "login.html";
+    window.location.href = "index.html";
     return;
   }
 
@@ -276,7 +283,7 @@ onAuthStateChanged(auth, async user => {
     // Check if profile is already completed
     if(data.profileCompleted) {
       if(confirm("You already have a profile set up. Would you like to proceed to the main page?")) {
-        window.location.href = "dashboard.html";
+        window.location.href = "main.html";
         return;
       }
     }
@@ -302,7 +309,7 @@ profileForm.addEventListener('submit', async (e) => {
   const user = auth.currentUser;
   if(!user) {
     alert("Session expired. Please log in again.");
-    window.location.href = "login.html";
+    window.location.href = "index.html";
     return;
   }
 
@@ -354,7 +361,7 @@ profileForm.addEventListener('submit', async (e) => {
     }
 
     alert("Profile saved successfully!");
-    window.location.href = "dashboard.html";
+    window.location.href = "main.html";
 
   } catch(err) {
     console.error(err);
