--- a/panel.html
+++ b/panel.html
@@ -1,579 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>Patholytica Control Panel</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --bg-color: #0d0d0d;
-      --text-color: #fff;
-      --card-bg: rgba(24,24,24,0.7);
-      --card-border: rgba(255,255,255,0.07);
-      --border: rgba(255,255,255,0.07);
-      --accent: #b0003a;
-      --accent-hover: #88002a;
-      --muted: #999;
-      --surface: rgba(18,18,18,0.85);
-      --surface-soft: rgba(255,255,255,0.05);
-      --border-strong: rgba(255,255,255,0.12);
-      --success: #50fa7b;
-      --warning: #f1fa8c;
-      --accent-soft: rgba(176,0,58,0.25);
-    }
-
-    body.light-theme {
-      --bg-color: #f5f5f5;
-      --text-color: #111;
-      --card-bg: rgba(255,255,255,0.65);
-      --card-border: rgba(0,0,0,0.1);
-      --border: rgba(0,0,0,0.1);
-      --accent: #b0003a;
-      --accent-hover: #88002a;
-      --muted: #666;
-      --surface: rgba(255,255,255,0.85);
-      --surface-soft: rgba(0,0,0,0.04);
-      --border-strong: rgba(0,0,0,0.15);
-      --success: #0ba360;
-      --warning: #be8a00;
-      --accent-soft: rgba(176,0,58,0.12);
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      font-family: "Inter", Arial, sans-serif;
-      background: var(--bg-color);
-      color: var(--text-color);
-      display: flex;
-      flex-direction: column;
-      transition: background 0.35s ease, color 0.35s ease;
-    }
-
-    .header-wrapper {
-      position: sticky;
-      top: 0;
-      background: var(--bg-color);
-      padding-top: env(safe-area-inset-top);
-      border-bottom: 1px solid var(--card-border);
-      z-index: 40;
-    }
-
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 16px 18px;
-    }
-
-    .logo-img {
-      height: 32px;
-      width: auto;
-      transition: filter 0.25s ease;
-      cursor: pointer;
-    }
-
-    body.light-theme .logo-img {
-      filter: invert(1);
-    }
-
-    .theme-toggle {
-      padding: 6px 14px;
-      font-size: 12.5px;
-      background: transparent;
-      border-radius: 10px;
-      border: 1px solid var(--card-border);
-      color: var(--text-color);
-      cursor: pointer;
-      transition: 0.25s ease;
-    }
-
-    .theme-toggle:hover {
-      border-color: var(--accent);
-      color: var(--accent);
-    }
-
-    main {
-      padding: 32px clamp(18px, 4vw, 64px) 56px;
-      display: flex;
-      flex-direction: column;
-      gap: 28px;
-    }
-
-    .hero {
-      border: 1px solid var(--border-strong);
-      border-radius: 20px;
-      padding: 28px;
-      background: linear-gradient(125deg, var(--accent-soft), var(--surface));
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .hero h1 {
-      margin: 0 0 8px;
-      font-size: clamp(26px, 4vw, 36px);
-    }
-
-    .hero p {
-      margin: 0;
-      max-width: 540px;
-      color: var(--muted);
-    }
-
-    .hero-actions {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-
-    .hero button {
-      border-radius: 10px;
-      border: 1px solid var(--card-border);
-      background: var(--accent);
-      color: #fff;
-      padding: 14px 22px;
-      font-weight: 600;
-      cursor: pointer;
-      box-shadow: 0 12px 28px rgba(176,0,58,0.35);
-      transition: transform 0.2s ease, background 0.2s ease;
-    }
-
-    .hero button.secondary {
-      background: transparent;
-      color: var(--text-color);
-      box-shadow: none;
-    }
-
-    .hero button:hover {
-      transform: translateY(-2px);
-      background: var(--accent-hover);
-    }
-
-    .hero button.secondary:hover {
-      color: var(--accent);
-      border-color: var(--accent);
-      background: rgba(176,0,58,0.08);
-    }
-
-    .stats-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 18px;
-    }
-
-    .stat-card {
-      border: 1px solid var(--border);
-      border-radius: 18px;
-      padding: 18px;
-      background: var(--surface);
-      backdrop-filter: blur(12px);
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .stat-card small {
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      color: var(--muted);
-    }
-
-    .stat-card strong {
-      font-size: 28px;
-    }
-
-    .panel {
-      border: 1px solid var(--border);
-      border-radius: 20px;
-      padding: 24px;
-      background: var(--surface);
-      backdrop-filter: blur(18px);
-      box-shadow: 0 20px 55px rgba(0,0,0,0.35);
-    }
-
-    body.light-theme .panel {
-      box-shadow: 0 14px 40px rgba(0,0,0,0.08);
-    }
-
-    .panel-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 12px;
-      margin-bottom: 18px;
-    }
-
-    .panel-header h2 {
-      margin: 0;
-      font-size: 18px;
-      letter-spacing: 0.04em;
-    }
-
-    .panel-header button {
-      border-radius: 999px;
-      border: 1px solid var(--border);
-      background: transparent;
-      color: var(--muted);
-      padding: 6px 14px;
-      font-size: 13px;
-      cursor: pointer;
-    }
-
-    .panel-header button:hover {
-      color: var(--accent);
-      border-color: var(--accent);
-    }
-
-    .control-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 20px;
-    }
-
-    .data-table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 14px;
-    }
-
-    .data-table th,
-    .data-table td {
-      text-align: left;
-      padding: 12px;
-      border-bottom: 1px solid var(--border);
-    }
-
-    .data-table th {
-      text-transform: uppercase;
-      letter-spacing: 0.06em;
-      font-size: 12px;
-      color: var(--muted);
-    }
-
-    .status-pill {
-      padding: 4px 10px;
-      border-radius: 999px;
-      font-size: 11px;
-      letter-spacing: 0.05em;
-      text-transform: uppercase;
-      border: 1px solid var(--border);
-    }
-
-    .status-pill.success {
-      border-color: rgba(80,250,123,0.4);
-      color: var(--success);
-    }
-
-    .status-pill.warning {
-      border-color: rgba(241,250,140,0.4);
-      color: var(--warning);
-    }
-
-    .empty-state {
-      text-align: center;
-      padding: 24px 12px;
-      color: var(--muted);
-    }
-
-    footer {
-      padding: 18px clamp(16px, 4vw, 40px) calc(20px + env(safe-area-inset-bottom));
-      text-align: center;
-      color: var(--muted);
-      border-top: 1px solid var(--border);
-      background: var(--bg-glass);
-      backdrop-filter: blur(14px);
-      font-size: 12px;
-    }
-
-    footer a {
-      color: var(--muted);
-      text-decoration: none;
-      margin: 0 6px;
-      transition: color 0.2s ease;
-    }
-
-    footer a:hover {
-      color: var(--accent);
-    }
-
-    @media (max-width: 720px) {
-      .header-inner {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .hero {
-        padding: 20px;
-      }
-      .panel {
-        padding: 18px;
-      }
-      main {
-        padding: 24px 14px 40px;
-      }
-      .data-table th,
-      .data-table td {
-        padding: 10px 8px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="header-wrapper">
-    <div class="header">
-      <a href="https://patholytica.com">
-        <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
-      </a>
-      <button class="theme-toggle" onclick="toggleTheme()">Theme</button>
-    </div>
-  </div>
-
-  <main>
-    <section class="hero">
-      <div>
-        <p class="status-pill success" style="display:inline-flex;">Control Center</p>
-        <h1>Unified User Intelligence</h1>
-        <p>Monitor your authenticated users from Firebase and the extended profile store in Supabase—all in one glassy panel that respects the Patholytica aesthetic.</p>
-      </div>
-      <div class="hero-actions">
-        <button id="refreshAllBtn">Refresh Data</button>
-        <button class="secondary" onclick="window.location.href='profiletemp.html'">Edit Profiles</button>
-      </div>
-    </section>
-
-    <section class="stats-grid" id="statsGrid">
-      <div class="stat-card">
-        <small>Firebase Users</small>
-        <strong id="firebaseCount">—</strong>
-        <span id="firebaseStatus" style="color:var(--muted); font-size:13px;">Waiting for data</span>
-      </div>
-      <div class="stat-card">
-        <small>Supabase Profiles</small>
-        <strong id="supabaseCount">—</strong>
-        <span id="supabaseStatus" style="color:var(--muted); font-size:13px;">Waiting for data</span>
-      </div>
-      <div class="stat-card">
-        <small>Last Refresh</small>
-        <strong id="lastRefresh">—</strong>
-        <span style="color:var(--muted); font-size:13px;">Auto-updates when you refresh</span>
-      </div>
-    </section>
-
-    <section class="panel">
-      <div class="panel-header">
-        <h2>User Intelligence Panel</h2>
-        <div style="display:flex; gap:10px;">
-          <button id="loadFirebaseBtn">Reload Firebase</button>
-          <button id="loadSupabaseBtn">Reload Supabase</button>
-        </div>
-      </div>
-      <div class="control-grid">
-        <article class="panel" style="padding:20px;">
-          <div class="panel-header" style="margin-bottom:12px;">
-            <h2 style="font-size:16px;">Firebase Directory</h2>
-            <span class="status-pill" id="firebaseBadge">Idle</span>
-          </div>
-          <div class="table-wrapper" id="firebaseTableWrapper">
-            <div class="empty-state">Connects to Firestore collection <code>users</code>. Waiting for load...</div>
-          </div>
-        </article>
-
-        <article class="panel" style="padding:20px;">
-          <div class="panel-header" style="margin-bottom:12px;">
-            <h2 style="font-size:16px;">Supabase Profiles</h2>
-            <span class="status-pill" id="supabaseBadge">Idle</span>
-          </div>
-          <div class="table-wrapper" id="supabaseTableWrapper">
-            <div class="empty-state">Reads from Supabase table <code>users</code>. Waiting for load...</div>
-          </div>
-        </article>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    © 2025 Patholytica by MedicineBank · <a href="#">Privacy</a> · <a href="#">Terms</a> · <a href="#">Support</a>
-  </footer>
-
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getFirestore, collection, getDocs, query, orderBy, limit } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBs6V0yY14cuLBXB1nciZ-X0eyAiodC-Ak",
-      authDomain: "patholytica.firebaseapp.com",
-      projectId: "patholytica",
-      storageBucket: "patholytica.firebasestorage.app",
-      messagingSenderId: "738430635282",
-      appId: "1:738430635282:web:8451ef380447c7611137cb"
-    };
-
-    const SUPABASE_URL = 'https://vmgenqvsmqiphcajaclx.supabase.co';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZtZ2VucXZzbXFpcGhjYWphY2x4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM3MTUzNzUsImV4cCI6MjA3OTI5MTM3NX0.a2FCNa6BzYqXJWPUkByxK1EiNzt1cZhc3cp2SVj-Ke4';
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-    const firebaseTableWrapper = document.getElementById('firebaseTableWrapper');
-    const supabaseTableWrapper = document.getElementById('supabaseTableWrapper');
-    const firebaseBadge = document.getElementById('firebaseBadge');
-    const supabaseBadge = document.getElementById('supabaseBadge');
-    const firebaseStatus = document.getElementById('firebaseStatus');
-    const supabaseStatus = document.getElementById('supabaseStatus');
-    const firebaseCount = document.getElementById('firebaseCount');
-    const supabaseCount = document.getElementById('supabaseCount');
-    const lastRefresh = document.getElementById('lastRefresh');
-
-    const loadFirebaseBtn = document.getElementById('loadFirebaseBtn');
-    const loadSupabaseBtn = document.getElementById('loadSupabaseBtn');
-    const refreshAllBtn = document.getElementById('refreshAllBtn');
-
-    const THEME_KEY = 'patholytica_theme';
-    if (localStorage.getItem(THEME_KEY) === 'light') {
-      document.body.classList.add('light-theme');
-    }
-
-    window.toggleTheme = function toggleTheme() {
-      document.body.classList.toggle('light-theme');
-      const mode = document.body.classList.contains('light-theme') ? 'light' : 'dark';
-      localStorage.setItem(THEME_KEY, mode);
-    };
-
-    function setBadge(el, status) {
-      el.textContent = status;
-      el.className = 'status-pill';
-      if (status.toLowerCase().includes('ok')) {
-        el.classList.add('success');
-      } else if (status.toLowerCase().includes('error')) {
-        el.classList.add('warning');
-      }
-    }
-
-    function renderTable(container, columns, rows) {
-      if (!rows.length) {
-        container.innerHTML = '<div class="empty-state">No records found.</div>';
-        return;
-      }
-      const head = columns.map(col => `<th>${col.label}</th>`).join('');
-      const body = rows.map(row => {
-        const cells = columns.map(col => `<td>${row[col.key] ?? '—'}</td>`).join('');
-        return `<tr>${cells}</tr>`;
-      }).join('');
-      container.innerHTML = `
-        <div style="overflow:auto;">
-          <table class="data-table">
-            <thead><tr>${head}</tr></thead>
-            <tbody>${body}</tbody>
-          </table>
-        </div>
-      `;
-    }
-
-    async function loadFirebaseDirectory() {
-      firebaseBadge.textContent = 'Loading…';
-      firebaseBadge.className = 'status-pill warning';
-      firebaseStatus.textContent = 'Fetching Firestore documents...';
-      firebaseTableWrapper.innerHTML = '<div class="empty-state">Loading Firebase users…</div>';
-      try {
-        const q = query(collection(db, 'users'), orderBy('updated_at', 'desc'), limit(25));
-        const snapshot = await getDocs(q);
-        const rows = snapshot.docs.map(doc => {
-          const data = doc.data();
-          return {
-            name: data.name || '—',
-            email: data.email || '—',
-            role: data.role || 'Member',
-            updated: data.updated_at ? new Date(data.updated_at).toLocaleString() : '—'
-          };
-        });
-        renderTable(firebaseTableWrapper, [
-          { key: 'name', label: 'Name' },
-          { key: 'email', label: 'Email' },
-          { key: 'role', label: 'Role' },
-          { key: 'updated', label: 'Updated' }
-        ], rows);
-        firebaseCount.textContent = rows.length.toString();
-        firebaseStatus.textContent = `Loaded ${rows.length} docs`;
-        setBadge(firebaseBadge, 'OK');
-        return rows.length;
-      } catch (error) {
-        console.error('Firebase fetch error:', error);
-        firebaseTableWrapper.innerHTML = `
-          <div class="empty-state">
-            Unable to load Firestore collection. Ensure a collection named <code>users</code> exists and Firestore rules permit read access.
-            <br><br>${error.message}
-          </div>`;
-        firebaseStatus.textContent = 'Error loading data';
-        setBadge(firebaseBadge, 'Error');
-        return 0;
-      }
-    }
-
-    async function loadSupabaseDirectory() {
-      supabaseBadge.textContent = 'Loading…';
-      supabaseBadge.className = 'status-pill warning';
-      supabaseStatus.textContent = 'Fetching Supabase rows...';
-      supabaseTableWrapper.innerHTML = '<div class="empty-state">Loading Supabase profiles…</div>';
-      try {
-        const { data, error } = await supabase
-          .from('users')
-          .select('name,email,username,bio,updated_at')
-          .order('updated_at', { ascending: false })
-          .limit(25);
-        if (error) throw error;
-        const rows = (data || []).map(item => ({
-          name: item.name || '—',
-          username: item.username || '—',
-          email: item.email || '—',
-          updated: item.updated_at ? new Date(item.updated_at).toLocaleString() : '—'
-        }));
-        renderTable(supabaseTableWrapper, [
-          { key: 'name', label: 'Name' },
-          { key: 'username', label: 'Username' },
-          { key: 'email', label: 'Email' },
-          { key: 'updated', label: 'Updated' }
-        ], rows);
-        supabaseCount.textContent = rows.length.toString();
-        supabaseStatus.textContent = `Loaded ${rows.length} rows`;
-        setBadge(supabaseBadge, 'OK');
-        return rows.length;
-      } catch (error) {
-        console.error('Supabase fetch error:', error);
-        supabaseTableWrapper.innerHTML = `
-          <div class="empty-state">
-            Unable to read Supabase table <code>users</code>. Confirm RLS policies allow the anon key to select rows.
-            <br><br>${error.message}
-          </div>`;
-        supabaseStatus.textContent = 'Error loading data';
-        setBadge(supabaseBadge, 'Error');
-        return 0;
-      }
-    }
-
-    async function refreshAll() {
-      const [firebaseTotal, supabaseTotal] = await Promise.all([
-        loadFirebaseDirectory(),
-        loadSupabaseDirectory()
-      ]);
-      lastRefresh.textContent = new Date().toLocaleTimeString();
-      return firebaseTotal + supabaseTotal;
-    }
-
-    loadFirebaseBtn.addEventListener('click', loadFirebaseDirectory);
-    loadSupabaseBtn.addEventListener('click', loadSupabaseDirectory);
-    refreshAllBtn.addEventListener('click', refreshAll);
-
-    refreshAll();
-  </script>
-</body>
-</html>
-
+later
